--- a/index.html
+++ b/index.html
@@ -2,6 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Video Background</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <!-- Background Video -->
+  <video autoplay muted loop playsinline id="bg-video">
+    <source src="bg.mp4" type="video/mp4">
+    Your browser does not support HTML5 video.
+  </video>
+
+  <!-- Content -->
+  <div class="content">
+    <h1>Welcome to My Website</h1>
+    <p>Video background working ✅</p>
+  </div>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
   <title>The 4 Planers</title>
   <link rel="stylesheet" href="style.css">
 </head>
