--- a/index.html
+++ b/index.html
@@ -12,6 +12,31 @@
     <source src="bg.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
+<div class="overlay"></div>
+
+<div class="content">
+  <h1>My Projects</h1>
+  <p class="tagline">Creative Web & App Development</p>
+
+  <div class="projects">
+
+    <div class="card">
+      <h2>Project 1</h2>
+      <p>Responsive website using HTML, CSS & JavaScript.</p>
+    </div>
+
+    <div class="card">
+      <h2>Project 2</h2>
+      <p>Landing page with video background and animations.</p>
+    </div>
+
+    <div class="card">
+      <h2>Project 3</h2>
+      <p>Portfolio website hosted on GitHub Pages.</p>
+    </div>
+
+  </div>
+</div>
 
   <!-- Content -->
   <div class="content">
