--- a/index.html
+++ b/index.html
@@ -53,19 +53,19 @@
 
       <div class="project-grid">
         <div class="project">
-          <img src="images/project1.jpg">
+          <img src="images/project1.jpeg">
           <h4>Architectural Visualization</h4>
           <p>Modern exterior 3D rendering project.</p>
         </div>
 
         <div class="project">
-          <img src="images/project2.jpg">
+          <img src="images/project2.jpeg">
           <h4>Interior Design</h4>
           <p>Photorealistic interior visualization.</p>
         </div>
 
         <div class="project">
-          <img src="images/project3.jpg">
+          <img src="images/project3.jpeg">
           <h4>Product Render</h4>
           <p>Premium product visualization.</p>
         </div>
