--- a/index.html
+++ b/index.html
@@ -7,97 +7,94 @@
 </head>
 <body>
 
-  <!-- Background Video -->
-  <video class="bg-video" autoplay muted loop playsinline>
-    <source src="bg.mp4" type="video/mp4">
-  </video>
+<!-- Background Video -->
+<video class="bg-video" autoplay muted loop playsinline>
+  <source src="bg.mp4" type="video/mp4">
+</video>
+<div class="overlay"></div>
 
-  <!-- Dark overlay -->
-  <div class="overlay"></div>
+<!-- HERO -->
+<section class="hero">
+  <h1>3D Visualization & Design</h1>
+  <p>High quality 3D visuals, animation & digital experiences</p>
+  <a href="#projects" class="btn">View Projects</a>
+</section>
 
-  <!-- HERO -->
-  <section class="hero">
-    <h1>3D Visualization & Design</h1>
-    <p>High quality 3D visuals, animation & digital experiences</p>
-    <a href="#projects" class="btn">View Projects</a>
-  </section>
-
-  <!-- SERVICES -->
-  <section class="services">
-    <div class="container">
-      <h2>Our Services</h2>
-
-      <div class="service-grid">
-        <div class="service">
-          <h3>3D Modeling</h3>
-          <p>Accurate and detailed 3D models for architecture and products.</p>
-        </div>
-
-        <div class="service">
-          <h3>3D Animation</h3>
-          <p>Realistic animations that bring ideas to life.</p>
-        </div>
-
-        <div class="service">
-          <h3>Product Visualization</h3>
-          <p>High-end product renders for marketing and presentations.</p>
-        </div>
+<!-- SERVICES -->
+<section class="services">
+  <div class="container">
+    <h2>Our Services</h2>
+    <div class="service-grid">
+      <div class="service">
+        <h3>3D Modeling</h3>
+        <p>Accurate and detailed 3D models.</p>
+      </div>
+      <div class="service">
+        <h3>3D Animation</h3>
+        <p>Realistic animations that bring ideas to life.</p>
+      </div>
+      <div class="service">
+        <h3>Product Visualization</h3>
+        <p>High-end product renders.</p>
       </div>
     </div>
-  </section>
-
-  <!-- PROJECTS -->
-  <section id="projects" class="projects">
-    <div class="container">
-      <h2>Our Work</h2>
-
-      <div class="project-grid">
-        <div class="project">
-          <img src="images/project1.jpeg">
-          <h4>Architectural Visualization</h4>
-          <p>Modern exterior 3D rendering project.</p>
-        </div>
-
-        <div class="project">
-          <img src="images/project2.jpeg">
-          <h4>Interior Design</h4>
-          <p>Photorealistic interior visualization.</p>
-        </div>
-
-        <div class="project">
-          <img src="images/project3.jpeg">
-          <h4>Product Render</h4>
-          <p>Premium product visualization.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ABOUT -->
-  <section class="about">
-    <div class="container">
-      <h2>Why Choose Us</h2>
-      <p>
-        We specialize in creating visually stunning 3D experiences
-        with precision, creativity and attention to detail.
-      </p>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 The 4 Planers. All Rights Reserved.</p>
-  </footer>
-  <!-- Floating Chat -->
-  <div id="chat-btn">💬</div>
-
-  <div id="chat-popup">
-    ...
   </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="projects">
+  <div class="container">
+    <h2>Our Work</h2>
+
+    <div class="project-grid">
+      <div class="project">
+        <img src="images/project1.jpeg">
+        <h4>Architectural Visualization</h4>
+        <p>Modern exterior 3D rendering.</p>
+      </div>
+
+      <div class="project">
+        <img src="images/project2.jpeg">
+        <h4>Interior Design</h4>
+        <p>Photorealistic interior visualization.</p>
+      </div>
+
+      <div class="project">
+        <img src="images/project3.jpeg">
+        <h4>Product Render</h4>
+        <p>Premium product visualization.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <div class="container">
+    <h2>Why Choose Us</h2>
+    <p>We create visually stunning 3D experiences.</p>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>© 2025 The 4 Planers. All Rights Reserved.</p>
+</footer>
+
+<!-- FLOATING CHAT -->
+<div id="chat-btn">💬</div>
+
+<div id="chat-popup">
+  <h3>Welcome 👋</h3>
+  <form id="chat-form" action="https://formspree.io/f/mzdbzoza" method="POST">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit" class="send-btn">Send</button>
+    <p id="success-msg"></p>
+  </form>
+</div>
+
 <script src="script.js"></script>
-</body>
-
-</body>
-
 </body>
 </html>
