--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
 </footer>
 
 <!-- FLOATING CHAT -->
-<div id="chat-btn">💬</div>
-
 <div id="chat-popup">
-  <h3>Welcome 👋</h3>
+  <div class="chat-header">Chat</div>
+
   <form id="chat-form" action="https://formspree.io/f/mzdbzoza" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
     <input type="email" name="email" placeholder="Your Email" required>
